# golfmapper3

./: .gitignore  code_refactor_plan.md  docker-compose-local.yml  docker-compose-stage.yml  docker-compose.yml  fixes-6-11-26.md  pyproject.toml
.run/: local mac docker compose.run.xml  mac - local dynamic frontend.run.xml
backend/: .dockerignore  Dockerfile  Dockerfile-local  pyproject.toml
backend/app/: README.md  config.py  database.py  dependencies.py  limiter.py  main.py  manual_GPS_edit.py  models.py
backend/app/routers/: admin.py  auth.py  course_requests.py  garmin_courses.py  garmin_courses_no_auth.py  map.py  password_reset.py  user_courses.py  user_courses_no_auth.py  users.py
backend/app/static/user_maps/: user_map_george_1.html
backend/app/utils/: map_course_entry.py
backend/tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_course_requests.py  test_example.py  test_garmin_courses.py  test_main.py  test_user_courses.py  test_users.py  utils.py
frontend/: .babelrc  .gitignore  Dockerfile  Dockerfile-local  env.sample  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
scripts/: README_course_search.md  check_course_data.py  check_db_sqlite3.py  course_search_app.py  db-migration-plan.md  examine_db_schemas.py  map_course_entry.py  map_garmin_to_golf_courses.py  merge_courses_locations.py  migrate_courses.py  migrate_george_to_new_db.py  reset_password.bat  reset_password.sh  reset_user_password.py  run_course_search.bat  run_course_search.sh  test_auth.py  test_login_endpoint.py  verify_migration.py  (+1 more)
(+51 files in other folders)
