[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gm3-backend"
version = "0.1.0"
description = "golfmapper3 Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "pydantic>=2.3.0",
    "httpx>=0.28.1",
    "geopy",
    "python-jose",
    "SQLAlchemy>=1.4.0",
    "starlette",
    "requests",
    "bcrypt",
    "passlib",
    "folium",
    "sentry-sdk[fastapi]",
    "python-dotenv>=0.19.0",
    "fastapi-pagination>=0.8.0",
    "psycopg2-binary",
    "python-multipart",
    "certifi",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "ruff>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["app"]